# sip_phone_example

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/audio_board/: CMakeLists.txt
components/audio_hal/: CMakeLists.txt
components/drv/: CMakeLists.txt
components/esp_sip/: CMakeLists.txt
components/lvgl/: CMakeLists.txt
components/sipgui/: CMakeLists.txt
main/: CMakeLists.txt
